[package]
name = "picture_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tera = { version = "1.16.1", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
actix-web = "4"
actix-files = "0.6.2"
env_logger = "0.11.3"
webbrowser = "1.0.1"
tokio = "1.25"
rand = "0.8"
