[package]
name = "picture_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arg parsing
clap = { version = "4.5", features = ["derive"] }

# Template engine
tera = { version = "1.20.1", default-features = false }

# serialisation (Template engine needs objects to be serialisable)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server
actix-web = "4"
# Static file hosting for the webserver
actix-files = "0.6.2"
# Logger configured from the environment (used by webserver)
env_logger = "^0.11"
log = "0.4"
# Starting a web browser automatically
webbrowser = "^1.0.6"

# Workers and async engine
tokio = "1.49"

# Randomised sorting
rand = "^0.9"

# Figure out the size of an image
imagesize = "0.14"

# Nice errors
thiserror = "^2.0"

# Reading (and writing) mp4 video files. We use this to get the dimensions.
mp4 = "0.14.0"

# figuring out if ffmpeg is installed
which = "8.0.0"

# generated ids for the files.
uuid = {version="1.20.0", features=["v4"]}
